# Ferris-Assistant

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
locales/en/: admin.ftl  afk.ftl  antiflood.ftl  backups.ftl  bans.ftl  blacklist.ftl  blstickers.ftl  captcha.ftl  chatpermissions.ftl  cleaner.ftl  connections.ftl  devs.ftl  disable.ftl  feds.ftl  filters.ftl  gbans.ftl  help.ftl  locks.ftl  logchannel.ftl  main.ftl  mutes.ftl  notes.ftl  reactions.ftl  reports.ftl  rules.ftl  sed.ftl  userinfo.ftl  users.ftl  warns.ftl  welcome.ftl
locales/id/: admin.ftl  afk.ftl  antiflood.ftl  backups.ftl  bans.ftl  blacklist.ftl  blstickers.ftl  captcha.ftl  chatpermissions.ftl  cleaner.ftl  connections.ftl  devs.ftl  disable.ftl  feds.ftl  filters.ftl  gbans.ftl  help.ftl  locks.ftl  logchannel.ftl  main.ftl  mutes.ftl  notes.ftl  reactions.ftl  reports.ftl  rules.ftl  sed.ftl  userinfo.ftl  users.ftl  warns.ftl  welcome.ftl
migrations/: 001_initial_schema.sql
src/: config.rs  main.rs
src/db/: mod.rs  models.rs  queries.rs
src/handlers/: mod.rs
src/keyboards/: inline.rs  mod.rs
src/modules/: admin.rs  afk.rs  antiflood.rs  antispam.rs  backups.rs  bans.rs  blacklist.rs  blstickers.rs  captcha.rs  chatpermissions.rs  cleaner.rs  connections.rs  devs.rs  disable.rs  feds.rs  filters.rs  gbans.rs  help.rs  locks.rs  log_channel.rs  mod.rs  mutes.rs  notes.rs  pins.rs  purges.rs  reactions.rs  reports.rs  rules.rs  sed.rs  start.rs  userinfo.rs  users.rs  warns.rs  welcome.rs
src/utils/: cache.rs  extraction.rs  formatting.rs  http_server.rs  i18n.rs  kick.rs  metrics.rs  mod.rs  permissions.rs  redis_cache.rs
tests/: db_tests.rs  unit_tests.rs
