[package]
name = "ferris-bot"
version = "0.1.0"
edition = "2021"
authors = ["Arumi"]
description = "Telegram Group Management Bot built with Rust and Teloxide"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
thiserror = "1"
anyhow = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
regex = "1"
parking_lot = "0.12"
fluent-bundle = "0.15"
unic-langid = "0.9"

[profile.release]
opt-level = 3
lto = true
strip = true
