[package]
name = "ferris-bot"
version = "0.1.0"
edition = "2021"
authors = ["Arumi"]
description = "Telegram Group Management Bot built with Rust and Teloxide"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros", "webhooks-axum"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
thiserror = "1"
anyhow = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
regex = "1"
parking_lot = "0.12"
fluent-bundle = "0.15"
unic-langid = "0.9"
# Redis caching
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
# HTTP server for health check + webhook + metrics
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
# Prometheus metrics
prometheus = { version = "0.13", features = ["process"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 16

[profile.dev]
opt-level = 0
debug = true